--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Course Petrov Notes</string>
+    <string name="btn_add_note">Добавить</string>
+    <string name="start_label">Что использовать?</string>
+    <string name="start_btn_room">ROOM</string>
 </resources>
