--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="start_btn_room">ROOM</string>
     <string name="title">Заметки</string>
     <string name="toast_enter_name">Введите имя заметки</string>
+    <string name="start_btn_firebase">Firebase</string>
+    <string name="email_hint">email</string>
+    <string name="password_hint">password</string>
+    <string name="start_btn_login">Login</string>
+    <string name="toast_wrong_enter">Введите пароль и почту</string>
 </resources>
